# telepathy-glib-sharp

./: AUTHORS  HACKING  Makefile.am  README  autogen.sh  bootstrap-0.7.10  bootstrap-generic  configure.ac  configure.in.in
sources/: AssemblyInfo.cs.in  Makefile.am  telepathy-glib-sharp-0.7.10-sources.xml  telepathy-glib-sharp-api-0.7.10.raw  telepathy-glib-sharp.metadata
